--- a/app/assets/stylesheets/users/_sign_up.scss
+++ b/app/assets/stylesheets/users/_sign_up.scss
@@ -183,4 +183,40 @@
       }
     }
   }
+
+
+  .complete {
+    width: 50%;
+    height: 100%;
+    margin: 0 auto;
+    background-color: white;
+    &__name {
+      font-size: 22px;
+      text-align: center;
+      border-bottom: 1px solid #f5f5f5;
+      padding: 33px;
+      font-weight: bold;
+    }
+    &__text {
+      height: 100%;
+      width: 100%;
+      &__content1 {
+        margin-top: 30px;
+        text-align: center;
+        font-size: 30px;
+      }
+      &__content2 {
+        text-align: center;
+        font-size: 20px;
+      }
+      &__content3 {
+        text-align: center;
+        margin: 100px 0 20px 0;
+        a {
+          text-decoration: none;
+          color: black;
+        }
+      }
+    }
+  }
 }
