--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -24,7 +24,7 @@
           %li.lists__right__item.lists__right__item--login
             = link_to "マイページ", user_path(current_user), class: 'items'
           %li.lists__right__item.lists__right__item--new
-            = link_to "ログアウト", destroy_user_session_path, class: 'items'
+            = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'items'
             
       - else
         %ul.lists__right
