--- a/app/assets/stylesheets/users/_sign_up.scss
+++ b/app/assets/stylesheets/users/_sign_up.scss
@@ -157,6 +157,12 @@
         &__box {
           @include registerbox
         }
+        &__box--pulldown {
+          width: 100%;
+          height: 40px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+        }
         
 
         &__any {
