--- a/app/assets/stylesheets/users/_sign_up.scss
+++ b/app/assets/stylesheets/users/_sign_up.scss
@@ -124,7 +124,6 @@
 
   .input {
     width: 50%;
-    height: 100%;
     margin: 0 auto;
     background-color: white;
     &__name {
@@ -135,7 +134,6 @@
       font-weight: bold;
     }
     &__group {
-      height: 100%;
       width: 100%;
       padding: 50px;
       max-width: 343px;
@@ -157,7 +155,7 @@
         &__box {
           @include registerbox
         }
-        &__box--pulldown {
+        select {
           width: 100%;
           height: 40px;
           border: 1px solid #ccc;
