--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -209,7 +209,7 @@
 
 = render 'modules/footer'
 
-= link_to "#" do
+= link_to new_item_path do
   .exhibition-btn
     %span.exhibition-btn__text
       出品する
