--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -18,7 +18,7 @@
                     = icon('fas', 'camera')                
                     クリックしてファイルを選択
                 = f.fields_for :images ,multiple: true do |i|
-                  = i.file_field :image ,class:"hidden-field", id: "item_images_attributes_0_image"
+                  = i.file_field :image ,class:"hidden-field", id: "item_images_attributes_0_image", name: "item[images_attributes][0][image]"
                   = i.file_field :image ,class:"hidden-field", id: "item_images_attributes_1_image", name: "item[images_attributes][1][image]"
                   = i.file_field :image ,class:"hidden-field", id: "item_images_attributes_2_image", name: "item[images_attributes][2][image]"
                   = i.file_field :image ,class:"hidden-field", id: "item_images_attributes_3_image", name: "item[images_attributes][3][image]"
@@ -36,30 +36,30 @@
           %label 商品の説明
           %span.required 必須
         .content__textarea
-          = f.text_area :description,  rows: "7", maxlength: "1000", required: "", placeholder: "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
+          = f.text_area :description,  rows: "7", maxlength: "1000", required: "", placeholder: "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", required: ""
 
       .content-detail.border
         .content__category
           %p 商品の詳細
           %label カテゴリー
           %span.required 必須
-          = f.collection_select :category_id, CategoryId.all, :id, :name
+          = f.collection_select :category_id, CategoryId.all, :id, :name, required: ""
 
-
+          = f.collection_select :user_id, CategoryId.all, :id, :name, required: ""
 
           %label サイズ
           %span.required 必須
-          = f.collection_select :size_id, Size.all, :id, :name
+          = f.collection_select :size_id, Size.all, :id, :name, required: ""
 
         .content__brand
           %label ブランド
           %span.any 任意
-          = f.text_field :brand_id, placeholder: "例）シャネル", type: "text", maxlength: "40", required: ""
+          = f.collection_select :brand_id, BrandId.all, :id, :name
 
         .content__status
           %label 商品の状態
           %span.required 必須
-          = f.collection_select :status_id, Status.all, :id, :name
+          = f.collection_select :status_id, Status.all, :id, :name, required: ""
 
 
       .content-info.border
@@ -72,25 +72,25 @@
             %circle{cx: "12", cy: "16.24", r: "1"}
         %label 配送料の負担
         %span.required 必須
-        = f.collection_select :shipping_cost_id, ShippingCost.all, :id, :cost
+        = f.collection_select :shipping_cost_id, ShippingCost.all, :id, :cost, required: ""
 
 
         .content__method
         %label 配送の方法
         %span.required 必須
-        = f.collection_select :shipping_method_id, ShippingMethod.all, :id, :name
+        = f.collection_select :shipping_method_id, ShippingMethod.all, :id, :name, required: ""
 
 
         .content__area
         %label 発送元の地域
         %span.required 必須
-        = f.collection_select :prefecture_id, Prefecture.all, :id, :name
+        = f.collection_select :prefecture_id, Prefecture.all, :id, :name, required: ""
 
 
         .content__day
         %label 発送までの日数
         %span.required 必須
-        = f.collection_select :shipping_date_id, ShippingDate.all, :id, :date
+        = f.collection_select :shipping_date_id, ShippingDate.all, :id, :date, required: ""
 
 
 
@@ -108,7 +108,7 @@
             %span.required 必須
             %span.yen ¥
           .content__selling-price__from            
-            = f.number_field :price,  placeholder: "0", type: "number", min: "500", max: "9999999",style: "text-align:right;"            
+            = f.number_field :price,  placeholder: "0", type: "number", min: "500", max: "9999999",style: "text-align:right;", required: ""
         .fee-form
           .name 販売手数料(10%)
           %span.value ー
