--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -37,6 +37,7 @@
           %span.required 必須
         .content__textarea
           = f.text_area :description,  rows: "7", maxlength: "1000", required: "", placeholder: "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", required: ""
+          = f.collection_select :user_id, Size.all, :id, :name, required: ""
 
       .content-detail.border
         .content__category
@@ -45,8 +46,8 @@
           %span.required 必須
           = f.collection_select :category_id, CategoryId.all, :id, :name, required: ""
 
-          = f.collection_select :user_id, CategoryId.all, :id, :name, required: ""
 
+          .content__size
           %label サイズ
           %span.required 必須
           = f.collection_select :size_id, Size.all, :id, :name, required: ""
