サーバーサイド２

--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -48,6 +48,9 @@
       line-height: 1.4em;
       margin-bottom: 24px;
     }
+    .flash{
+      color: red;
+    }
     .hidden-field{
       display: none;
     }
