--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -95,6 +95,11 @@
           margin: 16px auto 0;
           display: flex;
           flex-wrap: wrap;
+          p {
+            text-align: center;
+            line-height: 160px;
+            font-size: 30px;
+          }
           .label-content{
             width: 620px;
             .lebel-box{
