--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,10 +1,12 @@
 - if user_signed_in?
-  - if item.like_user(current_user)
-    = link_to item_likes_path(item.id), method: :delete, remote: true do
-      = icon("fas", "star", class: "list__body--details--icon")
+  - if item.like_user(current_user.id)
+    = link_to item_like_path(item.likes, item_id: item.id), method: :delete, remote: true do
+      %i.fas.fa-star.like--icon{"aria-hidden" => "true", style: "color: #FFD700;"}
+      = item.likes.count
   - else
     = link_to item_likes_path(item.id), method: :post, remote: true do
-      = icon("fas", "star", class: "list__body--details--icon")
+      %i.fas.fa-star.like--icon{"aria-hidden" => "true", style: "color: #C0C0C0;"}
+      = item.likes.count
 - else
-  = icon("fas", "star", class: "list__body--details--icon")
+  %i.fas.fa-star.like--icon{"aria-hidden" => "true"}
   = item.likes.count
