--- a/app/views/modules/_sign_footer.html.haml
+++ b/app/views/modules/_sign_footer.html.haml
@@ -1,4 +1,4 @@
-.footer
+.sign_footer
   %ul.footer__content
     %li.footer__content__text
       = link_to "プライバシーポリシー", "#", class: :footer__content__text__policy
