--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -130,7 +130,7 @@
       }
     }
     .content-detail {
-      height: 500px;
+      // height: 500px;
       padding: 40px;
     }
     .content-info {
