--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -100,7 +100,7 @@
           .list
             = link_to item_path(item.id) do
               .list--img
-                = image_tag item.images[0].image
+                = image_tag item.images[0].image.url
                   - if item.buyer_id.present?
                   .list--img__sold
                     .list--img__sold__inner SOLD
@@ -130,7 +130,7 @@
           .list
             = link_to item_path(item.id) do
               .list--img
-                = image_tag item.images[0].image
+                = image_tag item.images[0].image.url
                   - if item.buyer_id.present?
                   .list--img__sold
                     .list--img__sold__inner SOLD
