--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -24,6 +24,32 @@
           .image-show img {
             @include resize-img();
           }
+          .image-show{
+            position: relative;
+            &__sold {
+              width: 0;
+              height: 0;
+              border-width: 150px 150px 0 0;
+              border-color: #ea352d transparent transparent transparent;
+              display: block;
+              position: absolute;
+              top: 0;
+              left: 0;
+              z-index: 1;
+              border-style: solid;
+              &__inner {
+                top: -110px;
+                font-size: 30px;
+                position: absolute;
+                left: 15px;
+                z-index: 2;
+                color: #fff;
+                transform: rotate(-45deg);
+                letter-spacing: 2px;
+                font-weight: 600;
+              }
+            }
+          }
           .image-list {
             height: 120px;
             width: 300px;
