--- a/app/views/items/_related_item.html.haml
+++ b/app/views/items/_related_item.html.haml
@@ -1,7 +1,7 @@
 .items__item
   = link_to "#" do
     .items__item__image
-      = image_tag item.images[0].image, alt: "画像"
+      = image_tag item.images[0].image.url, alt: "画像"
     .items__item__info
       .items__item__info__name
         = item.name
