--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -48,11 +48,12 @@
       line-height: 1.4em;
       margin-bottom: 24px;
     }
-    .flash{
-      color: red;
-    }
     .hidden-field{
       display: none;
+    }
+    .error-message{
+      color: red;
+      text-align: center;
     }
     .content-image{
       height: 240px;
