--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -7,11 +7,11 @@
       .item-container__info
         .item-container__info__image
           .image-show
-            = image_tag "#{@item.images[0].image}", alt: "画像"
+            = image_tag @item.images[0].image.url, alt: "画像"
           .image-list
             - @item.images.each_with_index do |image, i|
               .image-list__item
-                = image_tag "#{image.image}", alt: "画像", class: "image-index-#{i}"
+                = image_tag image.image.url, alt: "画像", class: "image-index-#{i}"
         %table.item-container__info__detail
           %tbody
             %tr
