--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -35,7 +35,7 @@
               %th
                 商品の状態
               %td
-                = @item.status
+                = @item.status.name
             %tr
               %th
                 配送料の負担
