fixed spelling mistakes
綴りを修正しました。

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -10,11 +10,11 @@
           .content__image__message
           最大5枚までアップロードできます
           .flash
-            = flash[notice]
+            = flash[:notice]
           .content__image__box
             .prev-content
             .label-content
-              %label{for: "item_images_attributes_0_image",class: "lebel-box"}
+              %label{for: "item_images_attributes_0_image",class: "label-box"}
                 .content__image__select
                   %p.content__image__icon
                     = icon('fas', 'camera')                
