クレジットカード機能搭載１

--- a/app/views/mypage/index.html.haml
+++ b/app/views/mypage/index.html.haml
@@ -10,6 +10,8 @@
               %i.fas.fa-smile.fa-7x
           .container-main__informations__image__list
             %ul 
+              %li 
+                = current_user.nickname
               %li 出品数
               %li 0
               %li.container-main__informations__image__list__detail 購入数
