ログインページcssズレ修正

--- a/app/views/modules/_sign_footer.html.haml
+++ b/app/views/modules/_sign_footer.html.haml
@@ -1,10 +1,10 @@
 .sing_footer
-  %ul.footer__content
-    %li.footer__content__text
+  %ul.sing_footer__content
+    %li.sing_footer__content__text
       = link_to "プライバシーポリシー", "#", class: :footer__content__text__policy
-    %li.footer__content__text
+    %li.sing_footer__content__text
       = link_to "フリマ利用規約", "#", class: :footer__content__text__policy
-    %li.footer__content__text
+    %li.sing_footer__content__text
       = link_to "特定商法取引に関する規約", "#",  class: :footer__content__text__policy
   .footer__image
     = link_to image_tag "/logo/logo.png", size: "200x50"
