--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -23,7 +23,8 @@
               %th
                 カテゴリー
               %td
-                = link_to @item.category.ancestry, "#"
+                = link_to "> #{@item.category.root.name}"
+                = link_to "> #{@item.category.parent.name}", "#"
                 = link_to "> #{@item.category.name}", "#"
             - if @item.brand.present?
               %tr
