--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -71,7 +71,7 @@
         %span.item-container__delete-btn#open-popup
           この商品を削除する
       - else
-        = link_to "購入画面に進む", item_buy_confirmation_path(item_id: @item.id), class: "item-container__buy-btn"
+        = link_to "購入画面に進む", "/items/buy_confirmation/#{@item.id}" , class: "item-container__buy-btn"
       .item-container__explanation
         = @item.description
     .related-items
