--- a/app/assets/stylesheets/items/_buy_confirmation.scss
+++ b/app/assets/stylesheets/items/_buy_confirmation.scss
@@ -1,6 +1,9 @@
 .buy-main {
   background-color: #f5f5f5;
   color: #333;
+  a{
+    text-decoration: none;
+  }
   .buy-confirmation {
     width: 700px;
     margin: 0 auto;
