購入機能・単体テスト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "items/buy_confirmation";
 @import "mypage/mypage";
 @import "mypage/logout";
-
+@import "done";
 @import "items/new";
-@import "./card"
+@import "./card";
+@import "./purchase";
