--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -72,7 +72,10 @@
         %span.item-container__delete-btn#open-popup
           この商品を削除する
       - else
-        = link_to "購入画面に進む", "/items/buy_confirmation/#{@item.id}" , class: "item-container__buy-btn"
+        - if user_signed_in?
+          = link_to "購入画面に進む", "/items/buy_confirmation/#{@item.id}" , class: "item-container__buy-btn"
+        - else
+          =link_to "戻る", root_path , class: "item-container__buy-btn" 
       .item-container__explanation
         = @item.description
     .related-items
