--- a/app/views/items/buy_confirmation.html.haml
+++ b/app/views/items/buy_confirmation.html.haml
@@ -56,7 +56,7 @@
                   = @destination.destination_family_name
                   = @destination.destination_first_name
               = link_to "変更する", "#", {class: "user-info-box__info__edit"}
-          = link_to "/purchase/index/#{@item.id}" do
+          = link_to index_path do
             .purchase-confirmation
               %input{ type: 'submit', value: '購入する', class: 'purchase-confirmation__submit' }
 = render 'modules/sub_footer'
