--- a/app/views/card/new.html.haml
+++ b/app/views/card/new.html.haml
@@ -9,7 +9,7 @@
           %br
           = text_field_tag "number", "", class: "card___information__content__detail__form", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
           .card___information__content__detail__image
-            = image_tag('card_5brand', class: "card___information__content__detail__image-detail")
+            = image_tag('/card_5brand.png', class: "card___information__content__detail__image-detail")
           %br
           %label 有効期限
           %br
