--- a/app/views/modules/_sub_header.html.haml
+++ b/app/views/modules/_sub_header.html.haml
@@ -1,3 +1,4 @@
 %header.sub-header
   %p.sub-header__logo
-    = image_tag '/logo/logo.png'
+    = link_to root_path do
+      = image_tag '/logo/logo.png'
