--- a/app/views/mypage/_side-bar.html.haml
+++ b/app/views/mypage/_side-bar.html.haml
@@ -64,7 +64,7 @@
           .container__side-bar__configuration__detail
             %p 発送元・お届け先住所変更
             %i.fas.fa-chevron-right
-        = link_to new_card_path do
+        = link_to new_card_path, data: {"turbolinks" => false} do
           .container__side-bar__configuration__detail
             %p お支払い方法
             %i.fas.fa-chevron-right
