ビュー・出品ボタン修正

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -80,6 +80,13 @@
                 }
               }
             }
+            &-return {
+              padding-top: 20px;
+              text-align: center;
+              &__button {
+                color: black;
+              }
+            }
           }
         }
       } 
