--- a/app/views/card/show.html.haml
+++ b/app/views/card/show.html.haml
@@ -17,6 +17,6 @@
           %input{ type: "hidden", name: "card_id", value: "" }
           %button 削除する
       .information__detail__card__number-return
-        = link_to "戻る", root_path, {class: "information__detail__card__number-return__button"}
+        = link_to "トップへ戻る", root_path, {class: "information__detail__card__number-return__button"}
 
 = render 'modules/sub_footer'
