--- a/app/views/mypage/index.html.haml
+++ b/app/views/mypage/index.html.haml
@@ -26,7 +26,7 @@
 
 = render 'modules/footer'
 
-= link_to "#" do
+= link_to new_item_path do
   .exhibition-btn
     %span.exhibition-btn__text
       出品する
