--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -48,7 +48,8 @@
           %p 商品の詳細
           %label カテゴリー
           %span.required 必須
-          = f.select :category_id, @category_parent_array, {}, {class: 'content__category__select-box', id: 'parent_category', name: ""}
+          -# = f.select :category_id, @category_parent_array, {}, {class: 'content__category__select-box', id: 'parent_category', name: ""}
+          = f.select :category_id, options_for_select(@category_parent_array.map{ |b| [b.name, b.id, {data: {category: b.id}}] }), {include_blank: "---"}, {class: 'content__category__select-box', id: 'parent_category'}
 
         .content__size
           %label サイズ
