--- a/app/views/logout/index.html.haml
+++ b/app/views/logout/index.html.haml
@@ -1,6 +1,6 @@
 = render 'modules/header'
 
-%body
+.body
   .container
     .container-main
       = link_to destroy_user_session_path, method: :delete do
@@ -9,7 +9,7 @@
     = render 'mypage/side-bar'
 = render 'modules/footer'
 
-= link_to "#" do
+= link_to new_item_path do
   .exhibition-btn
     %span.exhibition-btn__text
       出品する
