--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,5 +1,5 @@
 .list
-  = link_to item_path(item.id), class: "list_link" do
+  = link_to item_path(item.id), class: "list_link", data: {turbolinks: "false"} do
     .list--img
       = image_tag item.images[0].image.url
         - if item.buyer_id.present?
