--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -79,9 +79,18 @@
             .lower-box {
               display: flex;
               text-align: center;
+              .edit-box {
+                color: #00b0ff;
+                width: 50%;
+                height: 50px;
+                line-height: 50px;
+                border: 1px solid #eee;
+                background: #f5f5f5;
+                cursor: pointer;
+              }
               .delete-box {
                 color: #00b0ff;
-                width: 100%;
+                width: 50%;
                 height: 50px;
                 line-height: 50px;
                 border: 1px solid #eee;
