--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -27,7 +27,7 @@
           %span.input__group__content__required
             必須
           %br
-          = f.text_field :nickname, {placeholder: "例）フリマ太郎ゴンザレス",class:'input__group__content__box'}
+          = f.text_field :nickname, {placeholder: "例）フリマ太郎",class:'input__group__content__box'}
           
         .input__group__content
           %label.input__group__content__label
@@ -59,7 +59,7 @@
           %span.input__group__content__required
             必須
           %br
-          = f.text_field :family_name, {placeholder:"例）笹錦",class:'input__group__content__name-left'}
+          = f.text_field :family_name, {placeholder:"例）田中",class:'input__group__content__name-left'}
           = f.text_field :first_name, {placeholder:"例）太郎",class:'input__group__content__name-rigth'}
 
         .input__group__content
@@ -68,7 +68,7 @@
           %span.input__group__content__required
             必須
           %br
-          = f.text_field :family_name_kana, {placeholder:"例）ササニシキ",class:'input__group__content__name-left'}
+          = f.text_field :family_name_kana, {placeholder:"例）タナカ",class:'input__group__content__name-left'}
           = f.text_field :first_name_kana, {placeholder:"例）タロウ",class:'input__group__content__name-rigth'}
 
         .input__group__content
