--- a/app/views/devise/registrations/new_destinations.html.haml
+++ b/app/views/devise/registrations/new_destinations.html.haml
@@ -26,7 +26,7 @@
           %span.input__group__content__required
             必須
           %br
-          = f.text_field :destination_family_name, {placeholder:"例）笹錦",class:'input__group__content__name-left'}
+          = f.text_field :destination_family_name, {placeholder:"例）田中",class:'input__group__content__name-left'}
           = f.text_field :destination_first_name, {placeholder:"例）太郎",class:'input__group__content__name-rigth'}
 
         .input__group__content
@@ -35,8 +35,8 @@
           %span.input__group__content__required
             必須
           %br
-          = f.text_field :destination_family_name_kana, {placeholder:"例）ササニシキ",class:'input__group__content__name-left'}
-          = f.text_field :destination_first_name_kana, {placeholder:"例）太郎",class:'input__group__content__name-rigth'}
+          = f.text_field :destination_family_name_kana, {placeholder:"例）タナカ",class:'input__group__content__name-left'}
+          = f.text_field :destination_first_name_kana, {placeholder:"例）タロウ",class:'input__group__content__name-rigth'}
 
         .input__group__content
           %label.input__group__content__label
